objects/Implementation_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>AccountLegalNameForWF1__c</fullName>
        <formula>Account_Legal_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountLegalNameForWF1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRecordTypeImpTracking__c</fullName>
        <description>This field is used in workflow to pull down the Account Record type- US172</description>
        <encryptionScheme>None</encryptionScheme>
        <label>AccountRecordTypeImpTracking</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Demo__c</fullName>
        <formula>Account_Legal_Name__r.Demo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <formula>Account_Legal_Name__r.Account_Executive__r.FirstName + &apos; &apos; +  Account_Legal_Name__r.Account_Executive__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Legal Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Implementations Tracking</relationshipLabel>
        <relationshipName>Implementations_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Back end field</description>
        <label>Account Manager Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations_Tracking1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Implementation_Record_ID__r.Account_Manager__r.FirstName + &apos; &apos; +   Implementation_Record_ID__r.Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Structure_Questionnaire_Status__c</fullName>
        <inlineHelpText>This field is updated via final step of Account Structure Questionnaire Omniscript or via API Integration. If Status equals &quot;Not Submitted or Pending Update After Initial Submission&quot; then execute Omniscript to update field.</inlineHelpText>
        <label>Account Structure Questionnaire Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted to Customer Master</fullName>
                </value>
                <value>
                    <fullName>Submitted Successfully to Customer Master</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Update After Initial Submission</fullName>
                    <isActive>false</isActive>
                    <label>Pending Update After Initial Submission</label>
                </value>
                <value>
                    <fullName>Ready for Re-Submission</fullName>
                    <isActive>false</isActive>
                    <label>Ready for Re-Submission</label>
                </value>
                <value>
                    <fullName>Ready for Submission</fullName>
                    <isActive>false</isActive>
                    <label>Ready for Submission</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Structure_Submission_Counter__c</fullName>
        <label>Account Structure Submission Counter</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Structure_Submission_To_CM_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Structure Submission To CM Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer__c</fullName>
        <formula>Implementation_Record_ID__r.Assigned_Implementer__r.FirstName + &apos; &apos; +  Implementation_Record_ID__r.Assigned_Implementer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Implementer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer_equals_Current_User__c</fullName>
        <formula>IF(Implementation_Record_ID__r.Assigned_Implementer__r.Id =  $User.Id, True, False)</formula>
        <label>Assigned Implementer equals Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Implementer_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Implementer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Implementations_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Audit_Consultant_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audit Consultant Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Scope_Letter_Received__c</fullName>
        <description>This field indicates whether Anthem received an Audit Scope Letter.</description>
        <label>Audit Scope Letter Received</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                    <isActive>false</isActive>
                    <label>--None--</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Analyst_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Analyst Assigned</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Coding_Precert_Completed__c</fullName>
        <label>Benefit Coding Percent Completed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Benefit_Testing_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Testing ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Benefit_Testing_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Testing ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>TEXT(Group_Number__r.ClaimSystem__c)</formula>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Stop_Detail__c</fullName>
        <label>Claims Stop Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Complexities__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client Complexities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>US16784</description>
        <label>Contract Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Audit_Scope_Letter_Received__c</fullName>
        <description>This field identifies the date that Anthem received an Audit Scope Letter.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Audit Scope Letter Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Transitioned_Out_Of_Implementations__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Transitioned Out Of Implementations</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>TEXT(IF(
((TODAY())- (Date_Implementations_Notified_Of_Sale__c))&lt;0,((-1)*((TODAY())- (Date_Implementations_Notified_Of_Sale__c))),((TODAY())- (Date_Implementations_Notified_Of_Sale__c)))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>De_Imp_Project_Plan_Percentage_Complete__c</fullName>
        <label>De-Imp Project Plan Percentage Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Dental_Complete_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>US16784</description>
        <label>Dental Complete Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBA_Permission_Set__c</fullName>
        <formula>IF(AND( OR($User.ProfileName__c =&quot;SME&quot;,$User.ProfileName__c =&quot;SME Dual&quot;), $Permission.EBA_SME),&quot;EBASME&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EBA Permission Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBA_Request_ECD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EBA Request ECD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EBA_Requested_ACD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EBA Requested ACD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPID_s_Assigned__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EPID#s Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engage_Medical_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engage Medical Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_and_Billing_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enrollment and Billing Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAINS_ASF_Status__c</fullName>
        <label>GAINS / ASF Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GAINS_Acct_Setup_Form_Issued__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GAINS/Acct Setup Form Issued</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Number</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Implementations Tracking</relationshipLabel>
        <relationshipName>Implementations_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Size__c</fullName>
        <formula>Implementation_Record_ID__r.Account_Group_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Cards_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ID Cards Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name1__c</fullName>
        <formula>HYPERLINK(Implementation_Record_ID__r.Id, Implementation_Record_ID__r.Implementation_Case_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name_Non_Hyperlink__c</fullName>
        <formula>Implementation_Record_ID__r.Implementation_Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name Non Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name_Read_only__c</fullName>
        <formula>Implementation_Record_ID__r.Implementation_Case_Name__c</formula>
        <label>Implementation Case Name Read only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Number__c</fullName>
        <formula>Implementation_Record_ID__r.OrderNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Status__c</fullName>
        <formula>TEXT(Implementation_Record_ID__r.Implementation_Status__c)</formula>
        <label>Implementation Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Record_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Record_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Record ID</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Implementations Tracking</relationshipLabel>
        <relationshipName>Implementations_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Record__c</fullName>
        <formula>Implementation_Record_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <formula>&quot;TRACK&quot; + &quot; &quot;  +   Implementation_Record_ID__r.OrderNumber</formula>
        <label>Implementation Tracking ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>TEXT(Implementation_Record_ID__r.Implementation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterPlan_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>InterPlan Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsAssignedImplementerLoggedInUser__c</fullName>
        <formula>Assigned_Implementer__c == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsAssignedImplementerLoggedInUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Control_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>US16784</description>
        <label>Issue Control Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JAA_Group__c</fullName>
        <formula>Implementation_Record_ID__r.JAA_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAA Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA_Request_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JIRA Request ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kick_Off_Meeting_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Kick Off Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Life_and_Disability_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PRDCRM-23116</description>
        <label>Life and Disability Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Load_Group_Status__c</fullName>
        <description>Created per PRDCRM-36678.</description>
        <inlineHelpText>Displays The Status Of The &quot;Load Group&quot; Request To Customer Master</inlineHelpText>
        <label>Load Group Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted to Customer Master</fullName>
                </value>
                <value>
                    <fullName>Successfully Submitted to Customer Master</fullName>
                </value>
                <value>
                    <fullName>Load Group Status</fullName>
                    <isActive>false</isActive>
                    <label>Load Group Status</label>
                </value>
                <value>
                    <fullName>Submitted To Customer Master</fullName>
                    <isActive>false</isActive>
                    <label>Submitted To Customer Master</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Load_Group_Submission_Counter__c</fullName>
        <description>Created per PRDCRM-36678.</description>
        <inlineHelpText>Displays The Count Of The Number Of Successful &quot;Load Group&quot; Requests To Customer Master</inlineHelpText>
        <label>Load Group Submission Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Group_Submission_To_CM_Timestamp__c</fullName>
        <description>Created per PRDCRM-36678</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Displays The Timestamp Of The &quot;Load Group&quot; Request To Customer Master</inlineHelpText>
        <label>Load Group Submission To CM Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoggedInUserProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUserProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCS_Group__c</fullName>
        <formula>Implementation_Record_ID__r.MCS_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCS Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Benefits_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>US16784</description>
        <label>Medical Benefits Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Products_Sold_For_Implementation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Products Sold For Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_End_Date__c</fullName>
        <formula>Implementation_Record_ID__r.Open_Enrollment_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <formula>Implementation_Record_ID__r.Open_Enrollment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <label>Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active - Green</fullName>
                </value>
                <value>
                    <fullName>Active - Yellow</fullName>
                </value>
                <value>
                    <fullName>Active - Red</fullName>
                </value>
                <value>
                    <fullName>Post Implementation</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Hold For SSCR</fullName>
                </value>
                <value>
                    <fullName>Hold for Run Out</fullName>
                </value>
                <value>
                    <fullName>Non-Implementer Pre-Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Permission_set__c</fullName>
        <formula>IF(AND( OR($User.ProfileName__c =&quot;SME&quot;,$User.ProfileName__c =&quot;SME Dual&quot;),$Permission.DIT_SME ),&quot;DITSME&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Permission set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Imp_Audit__c</fullName>
        <label>Pre-Imp Audit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Plan_Percentage_Complete__c</fullName>
        <label>Project Plan Percentage Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QLIFinJAA__c</fullName>
        <formula>Implementation_Record_ID__r.Quote.QLIFinJAA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QLIFinJAA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RX_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>RX Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipt_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Account_Legal_Name__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Out_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBC_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>SBC Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>text(Account_Legal_Name__r.Situs_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_At_EBA_Request_Level__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status At EBA Request Level</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_No_of_Plans__c</fullName>
        <label>Total No of Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UW_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UW Dental Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_Life_Disability_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UW Life &amp; Disability Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_Medical_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UW Medical Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_Vision_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UW Vision Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Approved__c</fullName>
        <defaultValue>true</defaultValue>
        <description>US16784</description>
        <label>Vision Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WGS_WI_MO_Only_Impacted_Suffixes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WGS WI/MO Only - Impacted Suffixes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>White_Glove__c</fullName>
        <label>White Glove</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Implementation Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Implementation_Record_ID__c</columns>
        <columns>JIRA_Request_ID__c</columns>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Title__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Implementation_Tracking__c.JAA_NASCO_and_WGS</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Implementation_Tracking</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Title__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Overall_Status__c</columns>
        <columns>Assigned_Implementer__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Production_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Date_Implementations_Notified_Of_Sale__c</columns>
        <columns>Days_From_Assignment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_Implementer_equals_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Implementation Tracking</label>
    </listViews>
    <nameField>
        <displayFormat>TRACK-{000000}</displayFormat>
        <label>Implementation Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementations Tracking</pluralLabel>
    <recordTypes>
        <fullName>JAA_NASCO_and_WGS</fullName>
        <active>true</active>
        <label>JAA NASCO and WGS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_NASCO_and_WGS</fullName>
        <active>true</active>
        <label>Local NASCO and WGS</label>
    </recordTypes>
    <recordTypes>
        <fullName>MCS_NASCO_and_WGS</fullName>
        <active>true</active>
        <label>MCS NASCO and WGS</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_NASCO_and_WGS</fullName>
        <active>true</active>
        <label>National NASCO and WGS</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>